--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
-</head>
-<body>
+  </head>
+  <body>
     <!-- <div id="header">
         <h3>Hii</h3>
         <ul id="navbar">
@@ -22,26 +22,26 @@
         <h1>this is a first page!</h1> 
     </div> -->
     <div class="megatron">
-        <ul class="list">
-            <li>
-                <span class="food">Chocolate</span>
-                <button class="delete" data-ns-test='1'>Click Me</button>
-            </li>
-            <li>
-                <span class="food">Pizzzzzaaa</span>
-                <button class="delete" data-ns-test='2'>Click Me</button>
-            </li>
-            <li>
-                <span class="food">Tandoori paneer tikka</span>
-                <button class="delete" data-ns-test='3'>Click Me</button>
-            </li>
-            <li>
-                <span class="food">Barbeque</span>
-                <button class="delete" data-ns-test='4'>Click Me</button>
-            </li>
-        </ul>
+      <ul class="list">
+        <li>
+          <span class="food">Chocolate</span>
+          <button class="delete" data-ns-test="1">Click Me</button>
+        </li>
+        <li>
+          <span class="food">Pizzzzzaaa</span>
+          <button class="delete" data-ns-test="2">Click Me</button>
+        </li>
+        <li>
+          <span class="food">Tandoori paneer tikka</span>
+          <button class="delete" data-ns-test="3">Click Me</button>
+        </li>
+        <li>
+          <span class="food">Barbeque</span>
+          <button class="delete" data-ns-test="4">Click Me</button>
+        </li>
+      </ul>
     </div>
-    <script src="script.js"></script>
-</body>
 
+    <script src="script.js"></script>
+  </body>
 </html>
