DOM events continue

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
@@ -39,9 +40,21 @@
                 <span class="food">Barbeque</span>
                 <button class="delete" data-ns-test='4'>Click Me</button>
             </li>
+            
         </ul>
+        <br>
+        <br>
+        <br>
+        <form id="todo-add-form">
+         <!-- <input type="number" placeholder="Add Rs"> -->
+         <input type="text" placeholder="Write todo title">
+         <!-- <button type="submit">Add</button> -->
+         <input type="submit" value="Add">
+        </form>
     </div>
     <script src="script.js"></script>
 </body>
 
 </html>
+
+
